--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,24 +9,32 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="{{site.baseurl}}/css/site.css">
+    {% if page.css %}
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/pages/{{ page.css }}.css">
+    {% endif %}
 </head>
 
 <body>
     <div class="site">
         <header class="site-header">
-            <h1 class="site-title">
-                <a href="{{ site.baseurl }}/">{{site.title}}</a>
-            </h1>
-            {% include navigation.html location="header" %}
+            <div class="wrapper">
+                <a href="{{ site.baseurl }}/" class="site-logo">
+                    <i class="fas fa-bus-alt"></i>
+                    <p class="site-title">ГТ София</p>
+                </a>
+                {% include navigation.html location="header" %}
+            </div>
+            <section>
+                <h1>Градски транспорт в София</h1>
+                <p>Научете историята на софийския траспорт от самото начало!</p>
+                <a href="{{ site.baseurl }}/history">Научи повече</a>
+            </section>
         </header>
         <main class="site-main">
-            {% if page.title %}
-            <h1>{{page.title}}</h1>
-            {% endif %}
             {{content}}
         </main>
         <footer class="site-footer">
-            <p><a href="{{ site.baseurl }}/" class="title">{{site.title}}</a>2019 &copy; Всички права запазени.</p>
+            <p><a href="{{ site.baseurl }}/" class="title">ГТ София</a> 2019 &copy; Всички права запазени.</p>
         </footer>
     </div>
 </body>
