Changed img paths

--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -1,6 +1,6 @@
 .site{
     &-header {
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/img/solaris-new.jpg') no-repeat;
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/solaris-new.jpg') no-repeat;
         background-size: cover;
         background-position: 3% 97%;
         padding: 1rem 0;
