--- a/docs/css/pages/index.css
+++ b/docs/css/pages/index.css
@@ -78,7 +78,6 @@
     opacity: 1; }
 
 .site-main .newinsite-section {
-  max-height: 180px;
   width: 100%;
   padding: 2rem 0;
   text-align: center;
@@ -135,7 +134,8 @@
     outline: none;
     font-weight: bold;
     margin-top: 1.2rem;
-    margin-bottom: 2rem; }
+    margin-bottom: 2rem;
+    transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out; }
     .site-main .subscribe-section input[type="submit"]:hover {
       background-color: #6b6b6b;
       color: #fff; }
