--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -7,7 +7,7 @@
         text-shadow: 1px 3px 3px rgb(31, 31, 31);
         height: 450px;
         color: #fff;
-        letter-spacing: 2;
+        letter-spacing: 0.1em;
 
         .wrapper{
             display: flex;
@@ -57,6 +57,7 @@
                 font-weight: bold;
                 margin-top: 0.8rem;
                 margin-bottom: 2rem;
+                transition: background-color 0.4s ease-in-out;
                 &:hover{
                     background-color: rgb(107, 107, 107);
                 }
@@ -75,13 +76,22 @@
             margin-left: auto;
             li{
                 list-style-type: none;
-                padding-right: 3.5rem;
+                margin-right: 3.5rem;
+
                 a{
                     letter-spacing: 0.15em;
                     color: #fff;
                     text-decoration: none;
                     font-weight: bold;
+                    padding-bottom: 0.5rem;
+                    
+                    &:hover{
+                        border-bottom: 1px solid white;
+                    }
                 }
+            }
+            .selected a{
+                border-bottom: 1px solid white;
             }
         }
     }
