--- a/_assets/scss/pages/index.scss
+++ b/_assets/scss/pages/index.scss
@@ -105,7 +105,6 @@
             }      
         }
         .newinsite-section{
-            max-height: 180px;
             width: 100%;
             padding: 2rem 0;
             text-align: center;
@@ -177,6 +176,7 @@
                 font-weight: bold;
                 margin-top: 1.2rem;
                 margin-bottom: 2rem;
+                transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
 
                 &:hover{
                     background-color: rgb(107, 107, 107);
