Added grid and new transitions

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -14,6 +14,7 @@
     {% if page.css %}
     <link rel="stylesheet" href="{{ site.baseurl }}/css/pages/{{ page.css }}.css">
     {% endif %}
+    <script src="{{ site.baseurl }}/scripts/site.js"></script>
 </head>
 
 <body>
