--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -74,7 +74,30 @@ html {
     margin-left: auto; }
     .site-nav ul li {
       list-style-type: none;
-      margin-right: 3.5rem; }
+      margin-right: 3.5rem;
+      opacity: 0;
+      transform: translateY(-1em);
+      transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out; }
+      .site-nav ul li:nth-child(1) {
+        transition-delay: 0.2s; }
+      .site-nav ul li:nth-child(2) {
+        transition-delay: 0.4s; }
+      .site-nav ul li:nth-child(3) {
+        transition-delay: 0.6s; }
+      .site-nav ul li:nth-child(4) {
+        transition-delay: 0.8s; }
+      .site-nav ul li:nth-child(5) {
+        transition-delay: 1s; }
+      .site-nav ul li:nth-child(6) {
+        transition-delay: 1.2s; }
+      .site-nav ul li:nth-child(7) {
+        transition-delay: 1.4s; }
+      .site-nav ul li:nth-child(8) {
+        transition-delay: 1.6s; }
+      .site-nav ul li:nth-child(9) {
+        transition-delay: 1.8s; }
+      .site-nav ul li:nth-child(10) {
+        transition-delay: 2s; }
       .site-nav ul li a {
         letter-spacing: 0.15em;
         color: #fff;
@@ -94,3 +117,23 @@ html {
   .site-footer a {
     color: white;
     text-decoration: none; }
+
+@-webkit-keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-2em, -2em); }
+  to {
+    opacity: 1;
+    transform: translateY(0); } }
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-2em, -2em); }
+  to {
+    opacity: 1;
+    transform: translateY(0); } }
+
+body.loaded .site-nav li {
+  opacity: 1;
+  transform: translateY(0); }
