--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -77,6 +77,13 @@
             li{
                 list-style-type: none;
                 margin-right: 3.5rem;
+                opacity: 0;
+                transform: translateY(-1em);
+                transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+
+                @for $i from 1 through 10 {
+                    &:nth-child(#{$i}) { transition-delay: 0.2s * $i;}
+                }
 
                 a{
                     letter-spacing: 0.15em;
