Added mixins part 1

--- a/_assets/scss/_site-footer.scss
+++ b/_assets/scss/_site-footer.scss
@@ -8,5 +8,17 @@
             color: white;
             text-decoration: none;
         }
+        @include mq(1024px){
+            font-size: 16px;
+        }
+
+        @include mq(768px){
+            font-size: 14px;
+        }
+
+        @include mq(480px){
+            font-size: 12px;
+        }
     }
+
 }
