--- a/_assets/scss/_animations.scss
+++ b/_assets/scss/_animations.scss
@@ -1,21 +1,11 @@
-@keyframes slideIn {
+@keyframes slideToRight {
     from {
         opacity: 0;
-        transform: translateY(-2em, -2em);
+        transform: translateX(-1em);
     }
 
     to {
         opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-body.loaded{
-    .site-nav{
-        li{
-            opacity: 1;
-            transform: translateY(0);
-        }
-        
+        transform: translateX(0);
     }
 }
