--- a/_assets/scss/_reset.scss
+++ b/_assets/scss/_reset.scss
@@ -10,3 +10,21 @@ html {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+@media (max-width: 600px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 1024px) {
+    html {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 1600px) {
+    html {
+        font-size: 16px;
+    }
+}
