--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -8,19 +8,31 @@ html {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif; }
 
+@media (max-width: 600px) {
+  html {
+    font-size: 12px; } }
+
+@media (max-width: 1024px) {
+  html {
+    font-size: 14px; } }
+
+@media (max-width: 1600px) {
+  html {
+    font-size: 16px; } }
+
 .site-header {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/solaris-new.jpg") no-repeat;
   background-size: cover;
-  background-position: 3% 97%;
-  padding: 1rem 0;
   text-shadow: 1px 3px 3px #1f1f1f;
-  height: 450px;
   color: #fff;
-  letter-spacing: 0.1em; }
+  letter-spacing: 0.1em;
+  padding: 1rem 0;
+  background-position: 3% 97%;
+  height: 450px; }
   .site-header .wrapper {
     display: flex;
-    width: 92%;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0 3rem;
     align-items: center;
     font-size: 20px; }
     .site-header .wrapper .site-logo {
@@ -30,7 +42,9 @@ html {
       width: 15%;
       padding: 1em 0;
       text-decoration: none;
-      letter-spacing: 0.1em; }
+      letter-spacing: 0.1em;
+      -webkit-animation: slideToRight 0.4s ease-in-out;
+              animation: slideToRight 0.4s ease-in-out; }
       .site-header .wrapper .site-logo i {
         font-size: 30px;
         padding-right: 1rem; }
@@ -73,31 +87,26 @@ html {
     align-items: center;
     margin-left: auto; }
     .site-nav ul li {
+      display: block;
       list-style-type: none;
       margin-right: 3.5rem;
-      opacity: 0;
-      transform: translateY(-1em);
-      transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out; }
+      -webkit-animation: slideToRight 0.4s ease-in-out;
+              animation: slideToRight 0.4s ease-in-out; }
       .site-nav ul li:nth-child(1) {
-        transition-delay: 0.2s; }
+        -webkit-animation-delay: 0.1s;
+                animation-delay: 0.1s; }
       .site-nav ul li:nth-child(2) {
-        transition-delay: 0.4s; }
+        -webkit-animation-delay: 0.2s;
+                animation-delay: 0.2s; }
       .site-nav ul li:nth-child(3) {
-        transition-delay: 0.6s; }
+        -webkit-animation-delay: 0.3s;
+                animation-delay: 0.3s; }
       .site-nav ul li:nth-child(4) {
-        transition-delay: 0.8s; }
+        -webkit-animation-delay: 0.4s;
+                animation-delay: 0.4s; }
       .site-nav ul li:nth-child(5) {
-        transition-delay: 1s; }
-      .site-nav ul li:nth-child(6) {
-        transition-delay: 1.2s; }
-      .site-nav ul li:nth-child(7) {
-        transition-delay: 1.4s; }
-      .site-nav ul li:nth-child(8) {
-        transition-delay: 1.6s; }
-      .site-nav ul li:nth-child(9) {
-        transition-delay: 1.8s; }
-      .site-nav ul li:nth-child(10) {
-        transition-delay: 2s; }
+        -webkit-animation-delay: 0.5s;
+                animation-delay: 0.5s; }
       .site-nav ul li a {
         letter-spacing: 0.15em;
         color: #fff;
@@ -117,23 +126,28 @@ html {
   .site-footer a {
     color: white;
     text-decoration: none; }
+  @media screen and (max-width: 1024px) {
+    .site-footer {
+      font-size: 16px; } }
+  @media screen and (max-width: 768px) {
+    .site-footer {
+      font-size: 14px; } }
+  @media screen and (max-width: 480px) {
+    .site-footer {
+      font-size: 12px; } }
 
-@-webkit-keyframes slideIn {
+@-webkit-keyframes slideToRight {
   from {
     opacity: 0;
-    transform: translateY(-2em, -2em); }
+    transform: translateX(-1em); }
   to {
     opacity: 1;
-    transform: translateY(0); } }
+    transform: translateX(0); } }
 
-@keyframes slideIn {
+@keyframes slideToRight {
   from {
     opacity: 0;
-    transform: translateY(-2em, -2em); }
+    transform: translateX(-1em); }
   to {
     opacity: 1;
-    transform: translateY(0); } }
-
-body.loaded .site-nav li {
-  opacity: 1;
-  transform: translateY(0); }
+    transform: translateX(0); } }
