--- a/_assets/scss/pages/index.scss
+++ b/_assets/scss/pages/index.scss
@@ -1,5 +1,10 @@
+@mixin mq($width) {
+    @media screen and (max-width: $width){
+        @content;
+    }
+}
+
 .site{
-    
     &-main{
         .news-section{
             color: rgb(21, 47, 99);
@@ -28,16 +33,57 @@
             }
             .news{
                 display: flex;
-                justify-content: space-around;
-
+                justify-content: space-around;  
+                @include mq(768px){
+                    flex-direction: column;
+                }     
                 li{
                     flex: 0 0 30%;
                     padding-bottom: 2rem;
                     list-style: none;
 
+                    @include mq(768px){
+                        border-bottom: 1px solid rgb(189, 189, 189);
+                        margin: 0.2rem auto;
+                        width: 80%;
+                        padding-bottom: 0.5rem;
+                        text-align: center;
+
+                        h3{
+                            @include mq(1024px){
+                                font-size: 16px;
+                            }
+                    
+                            @include mq(768px){
+                                font-size: 15px;
+                            }
+                        }
+                        &:last-of-type{
+                            border: none;
+                        }
+                    }
                     .date{
                         color: grey;
                         padding: 0.4rem 0;
+
+                        @include mq(1024px){
+                            font-size: 12px;
+                            padding: 0.3rem 0;
+                        }
+                
+                        @include mq(768px){
+                            font-size: 10px;
+                            padding: 0.2rem 0;
+                        }
+                    }
+                    .news-description{
+                        @include mq(1024px){
+                            font-size: 14px;
+                        }
+                
+                        @include mq(768px){
+                            font-size: 12px;
+                        }
                     }
                 }
             }
@@ -46,6 +92,13 @@
                 align-items: center;
                 justify-content: center;
                 margin-bottom: 1rem;
+                @include mq(1024px){
+                    font-size: 14px;
+                }
+        
+                @include mq(768px){
+                    font-size: 12px;
+                }
 
                 a{
                     text-decoration: none;
@@ -72,13 +125,43 @@
                 position: relative;
                 width: 900px;
 
+                @include mq(1024px){
+                    width: 600px;
+                }
+        
+                @include mq(768px){
+                    width: 400px;
+                }
+
+                @include mq(640px){
+                    width: 300px;
+                }
+
+                @include mq(480px){
+                    width: 200px;
+                }
                 
                 img{
                     display: block;
                     margin: 1rem auto;
-                    overflow: hidden;
                     height: auto;
                     width: 900px;
+
+                    @include mq(1024px){
+                        width: 600px;
+                    }
+            
+                    @include mq(768px){
+                        width: 400px;
+                    }
+    
+                    @include mq(640px){
+                        width: 300px;
+                    }
+    
+                    @include mq(480px){
+                        width: 200px;
+                    }
                 }
                 .overlay{
                     position: absolute;
@@ -89,14 +172,45 @@
                     width: 0;
                     height: 15%;
                     transition: width 0.5s ease-in;
+                    @include mq(1024px){
+                        height: 25%;
+                    }
+            
+                    @include mq(768px){
+                        height: 35%;
+                    }
+
+                    @include mq(640px){
+                        height: 40%;
+                    }
+
+                    @include mq(480px){
+                        height: 45%;
+                    }
 
                     .text{
+                        text-align: center;
                         opacity: 0;
                         color: white;
                         position: absolute;
                         top: 50%;
                         left: 50%;                      
                         transform: translate(-50%, -50%);
+                        @include mq(1024px){
+                            font-size: 12px;
+                        }
+                
+                        @include mq(768px){
+                            font-size: 11px;
+                        }
+    
+                        @include mq(640px){
+                            font-size: 10px;
+                        }
+    
+                        @include mq(480px){
+                            font-size: 9px;
+                        }
                     }
                 }
                 &:hover .overlay{
@@ -120,14 +234,38 @@
 
             ul{
                 display: block;
-                width: 26%;
+                width: 350px;
                 margin: 0 auto;
+        
+                @include mq(768px){
+                    width: 300px;
+                }
+
+                @include mq(480px){
+                    width: 250px;
+                }
+
+                @include mq(320px){
+                    width: 200px;
+                }
 
                 li {
                     list-style: none;
                     display: flex;
                     align-items: center;
                     padding: 0.3em;
+
+                    @include mq(1024px){
+                        font-size: 16px;
+                    }
+        
+                    @include mq(768px){
+                        font-size: 14px;
+                    }
+
+                    @include mq(480px){
+                        font-size: 12px;
+                    }
     
                     &:before{
                         font-family: 'Font Awesome 5 Free';
@@ -144,9 +282,9 @@
         .subscribe-section {
             text-align: center;
             background: rgb(21, 47, 99);
-            height: 220px;
             color: #fff;
-            padding: 2.5rem 0;
+            padding-top: 2.5rem;
+            padding-bottom: 0;
 
             h2{
                 &:after{
@@ -158,6 +296,22 @@
                     margin: 1rem auto;
                 }
             }
+            p{
+                margin: 0 auto;
+                @include mq(1024px){
+                    font-size: 16px;
+                    width: 90%;
+                    padding-bottom: 1rem;
+                }
+    
+                @include mq(768px){
+                    font-size: 14px;
+                }
+
+                @include mq(480px){
+                    font-size: 12px;
+                }
+            }
             input[type="email"]{
                 margin-bottom: 0.5rem;
                 margin-right: 0.3rem;
@@ -167,6 +321,19 @@
                 outline: none;
                 background-color: #fff;
                 color: #215AA0;
+
+                @include mq(1024px){
+                    padding: 0.6rem 6rem 0.6rem 0.6rem;
+                }
+    
+                @include mq(768px){
+                    padding: 0.5rem 3rem 0.5rem 0.5rem;
+                }
+
+                @include mq(480px){
+                    padding: 0.3rem 1rem 0.3rem 0.3rem;
+                    margin-bottom: 0;
+                }
             }
             input[type="submit"]{
                 background-color: #fff;
@@ -180,6 +347,23 @@
                 margin-top: 1.2rem;
                 margin-bottom: 2rem;
                 transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
+                
+                @include mq(1024px){
+                    padding: 0.6rem 2.5rem;
+                    margin-top: 1rem;
+                    margin-bottom: 1.8rem;
+                }
+    
+                @include mq(768px){
+                    padding: 0.55rem 2.5rem;
+                    margin-top: 1rem;
+                    margin-bottom: 1.8rem;
+                    font-size: 12px;
+                }
+
+                @include mq(480px){
+                    padding: 0.35rem 0.8rem;
+                }
 
                 &:hover{
                     background-color: rgb(107, 107, 107);
