--- a/_assets/scss/pages/news.scss
+++ b/_assets/scss/pages/news.scss
@@ -1,3 +1,9 @@
+@mixin mq($width) {
+    @media screen and (max-width: $width){
+        @content;
+    }
+}
+
 .site{
     &-main{
         color: rgb(21, 47, 99);
@@ -24,6 +30,16 @@
             width: 80%;
             padding-bottom: 1rem;
 
+            h3{
+                @include mq(1024px){
+                    font-size: 16px;
+                }
+        
+                @include mq(768px){
+                    font-size: 15px;
+                }
+            }
+
             &:last-of-type{
                 border: none;
             }
@@ -31,6 +47,26 @@
             .date{
                 color: grey;
                 padding: 0.4rem 0;
+
+                @include mq(1024px){
+                    font-size: 12px;
+                    padding: 0.3rem 0;
+                }
+        
+                @include mq(768px){
+                    font-size: 10px;
+                    padding: 0.2rem 0;
+                }
+            }
+
+            .news-description{
+                @include mq(1024px){
+                    font-size: 14px;
+                }
+        
+                @include mq(768px){
+                    font-size: 12px;
+                }
             }
         }
     }
