Added mixins part 2, added hamburger menu

--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -1,4 +1,14 @@
 .site{
+    .hamburger_checkbox {
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+    }
+    .hamburger_label {
+        display: none;
+    }
+
     &-header {
         background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/solaris-new.jpg') no-repeat;
         background-size: cover;
@@ -8,18 +18,18 @@
         padding: 1rem 0;
         background-position: 3% 97%;
         height: 450px;
+        width: 100%;
 
         .wrapper{
             display: flex;
-            width: 100%;
             margin: 0 3rem;
             align-items: center;
             font-size: 20px;
+            position: sticky;
             .site-logo {
                 align-items: center;
                 display: flex;
                 color: #fff;
-                width: 15%;
                 padding: 1em 0;
                 text-decoration: none;
                 letter-spacing: 0.1em;
@@ -29,7 +39,7 @@
                     font-size: 30px;
                     padding-right: 1rem;
                 }
-            } 
+            }
         }
 
         section {
@@ -39,12 +49,48 @@
                 font-size: 50px;
                 padding-bottom: 0.3em;
                 padding-top: 4rem;
+                @include mq(1024px){
+                    font-size: 44px;
+                }
+        
+                @include mq(768px){
+                    font-size: 38px;
+                }
+
+                @include mq(640px){
+                    font-size: 32px;
+                }
+
+                @include mq(480px){
+                    font-size: 28px;
+                }
             }
             p {
                 font-size: 20px;
                 width: 35%;
                 margin: 0 auto;
                 margin-bottom: 2.5rem;
+                @include mq(1024px){
+                    font-size: 18px;
+                    width: 40%;
+                }
+        
+                @include mq(768px){
+                    font-size: 18px;
+                    width: 55%;
+                    margin-bottom: 2rem;
+                }
+
+                @include mq(640px){
+                    font-size: 16px;
+                    width: 70%;
+                    margin-bottom: 1.5rem;
+                }
+
+                @include mq(480px){
+                    font-size: 14px;
+                    width: 80%;
+                }
             }
             a{
                 color: white;
@@ -62,24 +108,43 @@
                 &:hover{
                     background-color: rgb(107, 107, 107);
                 }
+                @include mq(1024px){
+                    padding: 0.7rem 2.5rem;
+                    font-size: 16px;
+                }
+        
+                @include mq(768px){
+                    padding: 0.6rem 2.1rem;
+                    font-size: 14px;
+                }
+
+                @include mq(640px){
+                    padding: 0.5rem 1.7rem;
+                    font-size: 12px;
+                }
+
+                @include mq(480px){
+                    padding: 0.4rem 1.5rem;
+                }
             }
         }
     }
     &-nav {
-        width: 100%;
         display: flex;
         justify-content: space-between;
-        margin: 0 auto;
+        margin-left: auto;
         align-items: center;
         ul{
             display: flex;
-            align-items: center;
-            margin-left: auto;
+            margin: 0 auto;
+            width: 100%;
             li{
                 display: block;
                 list-style-type: none;
                 margin-right: 3.5rem;
                 animation: slideToRight 0.4s ease-in-out;
+                padding: 0.5rem 0;
+                
 
                 @for $i from 1 through 5{
                     &:nth-child(#{$i}){
@@ -104,5 +169,90 @@
             }
         }
     }
+    
 }
 
+@media screen and (max-width: 1024px) {
+    .site{
+        
+        .wrapper {
+            .hamburger_label {
+                display: block;
+                margin-left: auto;
+                &:hover{
+                    cursor: pointer;
+                }
+            }
+            .site-nav {
+                position: absolute;
+                top: 0;
+                left: 0;
+                opacity: 0;
+                display: none;
+        
+                ul {
+                    opacity: 0;
+                    display: flex;
+                    flex-direction: column;
+        
+                    li {
+                        opacity: 0;
+                        transition: opacity 0.15s ease-in;
+                        background: #fff;
+                        color: black;
+                        width: 100%;
+                        background: rgb(21, 47, 99);
+                        text-align: center;
+                        margin-right: 0;
+                        a{
+                            &:hover{
+                                border: none;
+                            }
+                            
+                        }
+                    }
+                }
+            }      
+        } 
+        
+        .hamburger_checkbox:checked + .site-header {
+            .hamburger_label {
+                margin-left: auto;
+            }
+            .site-nav{
+                display: block;
+                position: static;
+                opacity: 1;
+                ul {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    opacity: 1;
+                    width: 100%;
+                    position: absolute;
+                    top: 4.5em; left: 0; right: 10em;
+    
+                    li {
+                        margin: 0;
+                        text-align: center;
+                        padding: 0.7em 0;
+                        opacity: 1;
+                        width: 100%;
+                        background: rgb(21, 47, 99);
+                        animation: none;
+                    
+                        &:last-child {padding-bottom: 0.8em;}
+                    
+                        /*&:nth-child(2) {transition-delay: 0.1s}
+                        &:nth-child(3) {transition-delay: 0.2s}
+                        &:nth-child(4) {transition-delay: 0.3s}
+                        */
+                        &:last-child {
+                            margin-bottom: 1em;
+                        }
+                    }
+                }
+            }
+        }
+    } 
+}
